mediabackups (0.2.0) bullseye; urgency=medium

  * Now the temporary download dir on worker gets deleted automatically
  * Move MySQL specific configuration to separate files, which will be
    private and will allow one to control custom MySQL client
    configuration from puppet from now on
  * Move wiki-specific configuration to connect_db- in particular,
    MySQLMedia.connect_db now requires a new wiki parameter and it
    autoresolves the host to connect to
  * MySQLMedia now has a list of sections with hosts and ports to be
    able to connect to different hosts, depending on the wiki
  * add-recent-uploads now has a compulsory wiki argument
  * Make regular wiki metadata upgrades iterate over all wikis
  * Improve unit test coverage

 -- Jaime Crespo <jcrespo@wikimedia.org>  Wed, 29 Nov 2023 19:18:13 +0100

mediabackups (0.1.7) bullseye; urgency=medium

  * Add support for quick backups for recent uploads
  * Several fixes in logs and other minor bugs

 -- Jaime Crespo <jcrespo@wikimedia.org>  Fri, 28 Apr 2023 17:00:45 +0200

mediabackups (0.1.6) bullseye; urgency=medium

  * Add unit tests
  * Make updating of backups more reliable

 -- Jaime Crespo <jcrespo@wikimedia.org>  Wed, 15 Feb 2023 13:26:50 +0100

mediabackups (0.1.5) bullseye; urgency=medium

  * Fix bug by which metadata deletions didn't go through fully

 --  Jaime Crespo <jcrespo@wikimedia.org>  Fri, 25 Nov 2022 11:58:08 +0100

mediabackups (0.1.4) bullseye; urgency=medium

  * Fix regression by which S3 deletion api call fails
  * Minor syntax issue fix

 -- Jaime Crespo <jcrespo@wikimedia.org>  Fri, 25 Nov 2022 09:47:36 +0100

mediabackups (0.1.3) bullseye; urgency=medium

  * Make delete-media-file be on dry-run mode by default,
    require --execute parameter to actually delete a file
  * Make sure each cli command logs on a separate file
  * Make clearer to the user when running on dry run and
    remind them to do it for the other datacenter
