@@ -105,22 +105,40 @@ def upload_file(download_path, backup_name, s3api):
     return location
 
 
-def download_and_backup(f, tmp_dir, download_path, non_public_wikis, s3api, encryption):
+def download_and_backup(f, tmp_dir, non_public_wikis, s3api, encryption):
     """
     Given a file, download it from Swift to tmp_dir locally, process it (hash, encrypt, etc)
-    and upload to backup through S3 api. Return the backup status ("backed up") and its
-    final upload path (location), or rise an exception of type DownloadException,
-    EncryptionException, DuplicateException or UploadException.
+    and upload to backup through S3 api. Return the backup status ("backed up"), the local
+    tmp download pathand and its final upload path (location) in a tuple.
     """
     logger = logging.getLogger('backup')
-    download_path = download_file_from_production(f, tmp_dir)
-    handle_checksums(f, download_path)
-    backup_name = calculate_backup_storage_path(f, non_public_wikis)
-    check_file_exists(backup_name, s3api)
-    download_path = handle_encryption(f, download_path, encryption, non_public_wikis)
-    location = upload_file(download_path, backup_name, s3api)
-    logger.info('Backup of "%s" completed correctly', str(f))
-    return 'backedup', location
+    new_status = 'error'
+    location = None
+    download_path = None
+    try:
+        download_path = download_file_from_production(f, tmp_dir)
+        handle_checksums(f, download_path)
+        backup_name = calculate_backup_storage_path(f, non_public_wikis)
+        check_file_exists(backup_name, s3api)
+        download_path = handle_encryption(f, download_path, encryption, non_public_wikis)
+        location = upload_file(download_path, backup_name, s3api)
+        new_status = 'backedup'
+        logger.info('Backup of "%s" completed correctly', str(f))
+    except DownloadException:
+        new_status = 'error'
+        logger.error('Download of "%s" failed', str(f))
+    except EncryptionException:
+        new_status = 'error'
+        logger.error('Encryption of "%s" failed', str(f))
+    except DuplicateException:
+        new_status = 'duplicate'
+        logger.warning('A file with the same sha265 as "%s" was already '
+                       'uploaded, skipping.', str(f))
+    except UploadException:
+        new_status = 'error'
+        logger.error('Upload of "%s" failed', str(f))
+
+    return new_status, download_path, location
 
 
 def remove_tmp_dir(tmp_dir):
@@ -164,7 +182,7 @@ def main():
     # Setup all needed interfaces
     logger = logging.getLogger('backup')
     logging.basicConfig(format='[%(asctime)s] %(levelname)s:%(name)s %(message)s',
-                        filename='backup_store.log', level=logging.WARNING)
+                        filename='backup_store.log', level=logging.INFO)
     metadata = mediabackups.MySQLMetadata.MySQLMetadata(read_yaml_config(METADATA_CONFIG_FILE))
     storage_config = read_yaml_config(STORAGE_CONFIG_FILE)
     s3api = mediabackups.S3.S3(storage_config)
@@ -177,36 +195,20 @@ def main():
     for batch in metadata.process_files():
         status_list = list()
         for file_id, f in batch.items():
-            location = None
-            download_path = None
-            try:
-                new_status, location = download_and_backup(f, tmp_dir, download_path, non_public_wikis,
-                                                           s3api, encryption)
-            except DownloadException:
-                logger.error('Download of "%s" failed', str(f))
-                new_status = 'error'
-            except EncryptionException:
-                logger.error('Encryption of "%s" failed', str(f))
-                new_status = 'error'
-            except DuplicateException:
-                logger.warning('A file with the same sha265 as "%s" was already '
-                               'uploaded, skipping.', str(f))
-                new_status = 'duplicate'
-            except UploadException:
-                logger.error('Upload of "%s" failed', str(f))
-                new_status = 'error'
-            finally:
-                status_list.append({
-                    'id': file_id, 'file': f, 'status': new_status, 'location': location}
-                )
+            new_status, download_path, location = download_and_backup(f, tmp_dir, non_public_wikis,
+                                                                      s3api, encryption)
+            status_list.append({
+                'id': file_id, 'file': f, 'status': new_status, 'location': location}
+            )
+            if download_path is not None:
                 try:
-                    if download_path is not None:
-                        os.remove(download_path)
+                    os.remove(download_path)
                 except OSError:
                     pass  # ignoring errors as the file may not exist
         metadata.update_status(status_list)
 
     # cleanup and finish
+    logger.info("No more files to process- finishing.")
     metadata.close_db()
     remove_tmp_dir(tmp_dir)
 
